--- a/src/styles.css
+++ b/src/styles.css
@@ -45,6 +45,70 @@ aside {
     background-color: var(--color-secondary);
 }
 
+.side-content {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+}
+
+#add-task {
+    all: unset;
+    cursor: pointer;
+    width: 6rem;
+    height: 3rem;
+    transition: box-shadow 0.5s;
+}
+
+#add-task:hover {
+    /* text-decoration: underline; */
+    box-shadow: 0 1px 0 #ffffff;
+}
+
+.project-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items:  center;
+    background-color: var(--color-accent);
+    padding: .5rem;
+    margin: 1rem 0 1rem 0;
+    border-radius: .2rem;
+}
+
+#add-project {
+    cursor: pointer;
+    padding: .2rem;
+}
+
+#add-project:hover{
+    background-color: var(--color-secondary);
+    border-radius: .2rem;
+}
+
+.project-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    padding: 1rem;
+    transition: background-color .2s;
+}
+
+
+.project-item:hover{
+    background-color: rgb(58, 54, 54);
+
+}
+
+#project-remove {
+    padding: .2rem;
+}
+
+#project-remove:hover {
+    box-shadow: 0 1px 0 #ffffff;
+
+}
+
+
 header {
     background-color: var(--color-primary);
 
